# scrapyrus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  COPYING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
insights/: biblio.md  biblio_inconsistencies.md  embedding-evaluation.md  existing-stylesheets.md  language-codes.md  ldab.md  metadata.md  origdate.md  places.md  sosol_fuzzy_dates.md  token_estimation.md
scripts/: aggregate_hgv_metadata.py  analyze_biblio.py  analyze_origdate.py  analyze_places.py  backfill_image_manifests.py  check_idpdata_compatibility.py  dirname_hgv_to_tm.py  extract_transcriptions.py  image_prefix_top10.sh  image_prefix_top30.sh  postgres_dump.sh  postgres_restore.sh
src/scrapyrus/: __init__.py  __main__.py  hgv.py  idpdata.py  image_manifest.py  images.py  images_broken.txt  ingestion.py  metadata.py  metadata.sql  saxon_xml.py
tests/: conftest.py  test_backfill_image_manifests.py  test_cli.py  test_dirname_hgv_to_tm.py  test_hgv.py  test_idpdata.py  test_image_manifest.py  test_images.py  test_ingestion.py  test_metadata.py  test_metadata_xmlutils.py  test_scrapyrus.py
tests/metadata/: test_ancient_edition.py  test_base.py  test_keywords.py  test_origdate.py  test_origplace.py  test_papyri.py  test_principal_edition.py  test_xmlutils.py
tests/scrapers/: test_aphrodito.py  test_berlpap.py  test_bodleian.py  test_british_museum.py  test_cairo_museum.py  test_doi.py  test_egnet.py  test_iiif.py  test_louvre.py  test_met_museum.py  test_nakala.py  test_onb.py  test_oxford.py  test_papyrus_portal.py  test_psi_online.py  test_ubhd.py  test_uc_berkeley.py  (+6 more)
(+53 files in other folders)
